--- a/org.alloytools.alloy.absinst/.classpath
+++ b/org.alloytools.alloy.absinst/.classpath
@@ -11,7 +11,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" output="target/classes" path="src/main/java"/>
-	<classpathentry kind="src" path="src/test/java"/>
+	<classpathentry kind="src" output="target/classes" path="src/test/java"/>
 	<classpathentry kind="src" path="/org.alloytools.alloy.core"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
